# timescaledb-mcp

./: .env.example  CHANGELOG.md  Makefile  PUBLISHING.md  README.md  docker-compose.test.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
docker/: init-test-db.sh
scripts/: publish.sh  test_connection.py
src/timescaledb_mcp/: __init__.py  __main__.py  config.py  database.py  exceptions.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py
