[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timescaledb-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for TimescaleDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TimescaleDB MCP Contributors"}
]
keywords = ["mcp", "timescaledb", "postgresql", "timeseries", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-all>=0.1.0",
]

[project.scripts]
timescaledb-mcp = "timescaledb_mcp.server:cli"

[project.urls]
Homepage = "https://github.com/brunoprela/timescaledb-mcp"
Documentation = "https://github.com/brunoprela/timescaledb-mcp#readme"
Repository = "https://github.com/brunoprela/timescaledb-mcp"
Issues = "https://github.com/brunoprela/timescaledb-mcp/issues"

[tool.hatchling.build]
source-dir = "src"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
